Section-7/7.3-ContextPathRouting/Course/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-course-app-service
  labels:
    app: ingress-course
spec:
  type: ClusterIP
  selector:
    app: ingress-course
  ports:
    - port: 80
      targetPort: 80
