Section-7/7.3-ContextPathRouting/Course/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-course-service
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /course
            pathType: Prefix
            backend:
              service:
                name: ingress-course-app-service
                port: 
                  number: 80
